loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:3: error: reassignment to val
else{ while (isFacingWall=false) {forward()}} 
                         ^